--- a/docs/docs/reference/typescript-api/common/bootstrap.mdx
+++ b/docs/docs/reference/typescript-api/common/bootstrap.mdx
@@ -81,6 +81,7 @@ Vendure server.
 interface BootstrapOptions {
     nestApplicationOptions?: NestApplicationOptions;
     ignoreCompatibilityErrorsForPlugins?: Array<DynamicModule | Type<any>>;
+    onBeforeAppListen?: (app: INestApplication) => void | Promise<void>;
 }
 ```
 
@@ -114,5 +115,24 @@ bootstrap(config, {
 });
 ```
 
+### onBeforeAppListen
+<MemberInfo kind="property" type={`(app: INestApplication) => void | Promise<void>`}   />
+
+This callback is executed just before the Nest application starts listening for incoming requests.
+It receives the Nest application instance as an argument, allowing you to perform any necessary setup or configuration before the server starts.
+
+*Example*
+
+```ts
+import { bootstrap } from '@vendure/core';
+import { config } from './vendure-config';
+
+bootstrap(config, {
+  onBeforeAppListen: async (app) => {
+    app.useGlobalFilters(new MyExceptionFilter());
+    // Perform any other necessary setup here e.g. initialize Swagger.
+  }
+});
+```
 
 </div>
