--- a/docs/docs/reference/typescript-api/custom-fields/index.mdx
+++ b/docs/docs/reference/typescript-api/custom-fields/index.mdx
@@ -28,6 +28,7 @@ bootstrap({
 type CustomFields = {
     Address?: CustomFieldConfig[];
     Administrator?: CustomFieldConfig[];
+    ApiKey?: CustomFieldConfig[];
     Asset?: CustomFieldConfig[];
     Channel?: CustomFieldConfig[];
     Collection?: CustomFieldConfig[];
