--- a/docs/docs/reference/graphql-api/shop/input-types.mdx
+++ b/docs/docs/reference/graphql-api/shop/input-types.mdx
@@ -1074,7 +1074,9 @@ input PaymentInput {
   facetValueOperator: LogicalOperator
   facetValueFilters: [FacetValueFilterInput!]
   collectionId: ID
+  collectionIds: [ID!]
   collectionSlug: String
+  collectionSlugs: [String!]
   groupByProduct: Boolean
   take: Int
   skip: Int
