--- a/docs/docs/reference/typescript-api/job-queue/job-queue-service.mdx
+++ b/docs/docs/reference/typescript-api/job-queue/job-queue-service.mdx
@@ -38,6 +38,7 @@ class VideoTranscoderService {
 
 ```ts title="Signature"
 class JobQueueService implements OnModuleDestroy {
+    started: boolean
     constructor(configService: ConfigService, jobBufferService: JobBufferService)
     createQueue(options: CreateQueueOptions<Data>) => Promise<JobQueue<Data>>;
     start() => Promise<void>;
@@ -54,6 +55,11 @@ class JobQueueService implements OnModuleDestroy {
 
 <div className="members-wrapper">
 
+### started
+
+<MemberInfo kind="property" type={`boolean`}   />
+
+Returns `true` if the job queues have been started.
 ### constructor
 
 <MemberInfo kind="method" type={`(configService: ConfigService, jobBufferService: JobBufferService) => JobQueueService`}   />
