--- a/docs/docs/reference/core-plugins/elasticsearch-plugin/index.mdx
+++ b/docs/docs/reference/core-plugins/elasticsearch-plugin/index.mdx
@@ -2,28 +2,17 @@
 title: "ElasticsearchPlugin"
 generated: true
 ---
-<GenerationInfo sourceFile="packages/elasticsearch-plugin/src/plugin.ts" sourceLine="228" packageName="@vendure/elasticsearch-plugin" />
+<GenerationInfo sourceFile="packages/elasticsearch-plugin/src/plugin.ts" sourceLine="242" packageName="@vendure/elasticsearch-plugin" />
 
 This plugin allows your product search to be powered by [Elasticsearch](https://github.com/elastic/elasticsearch) - a powerful Open Source search
 engine. This is a drop-in replacement for the DefaultSearchPlugin which exposes many powerful configuration options enabling your storefront
 to support a wide range of use-cases such as indexing of custom properties, fine control over search index configuration, and to leverage
 advanced Elasticsearch features like spacial search.
 
-## Installation
+**ElasticSearch v9.1.0 is supported**
 
-**Requires Elasticsearch v7.0 < required Elasticsearch version < 7.10 **
-Elasticsearch version 7.10.2 will throw error due to incompatibility with elasticsearch-js client.
-[Check here for more info](https://github.com/elastic/elasticsearch-js/issues/1519).
-
-`yarn add @elastic/elasticsearch @vendure/elasticsearch-plugin`
-
-or
-
-`npm install @elastic/elasticsearch @vendure/elasticsearch-plugin`
-
-Make sure to remove the `DefaultSearchPlugin` if it is still in the VendureConfig plugins array.
-
-Then add the `ElasticsearchPlugin`, calling the `.init()` method with [ElasticsearchOptions](/reference/core-plugins/elasticsearch-plugin/elasticsearch-options#elasticsearchoptions):
+**Important information about versions and ElasticSearch security:**
+The version of ElasticSearch that is deployed, the version of the JS library
 
 *Example*
 
