--- a/docs/docs/reference/core-plugins/payments-plugin/mollie-plugin.mdx
+++ b/docs/docs/reference/core-plugins/payments-plugin/mollie-plugin.mdx
@@ -2,14 +2,14 @@
 title: "MolliePlugin"
 generated: true
 ---
-<GenerationInfo sourceFile="packages/payments-plugin/src/mollie/mollie.plugin.ts" sourceLine="206" packageName="@vendure/payments-plugin" />
+<GenerationInfo sourceFile="packages/payments-plugin/src/mollie/mollie.plugin.ts" sourceLine="234" packageName="@vendure/payments-plugin" />
 
 Plugin to enable payments through the [Mollie platform](https://docs.mollie.com/).
 This plugin uses the Order API from Mollie, not the Payments API.
 
-## Requirements
+### Requirements
 
-1. You will need to create a Mollie account and get your apiKey in the dashboard.
+1. You will need to create a Mollie account and get your api key from the Mollie dashboard.
 2. Install the Payments plugin and the Mollie client:
 
     `yarn add @vendure/payments-plugin @mollie/api-client`
@@ -18,7 +18,7 @@ This plugin uses the Order API from Mollie, not the Payments API.
 
     `npm install @vendure/payments-plugin @mollie/api-client`
 
-## Setup
+### Setup
 
 1. Add the plugin to your VendureConfig `plugins` array:
     ```ts
@@ -30,16 +30,16 @@ This plugin uses the Order API from Mollie, not the Payments API.
       MolliePlugin.init({ vendureHost: 'https://yourhost.io/' }),
     ]
     ```
-2. Create a new PaymentMethod in the Admin UI, and select "Mollie payments" as the handler.
+2. Create a new payment method in the Admin UI, and select "Mollie payments" as the handler.
 3. Set your Mollie apiKey in the `API Key` field.
 4. Set the `Fallback redirectUrl` to the url that the customer should be redirected to after completing the payment.
 You can override this url by passing the `redirectUrl` as an argument to the `createMolliePaymentIntent` mutation.
 
-## Storefront usage
+### Storefront usage
 
 In your storefront you add a payment to an order using the `createMolliePaymentIntent` mutation. In this example, our Mollie
-PaymentMethod was given the code "mollie-payment-method". The `redirectUrl``is the url that is used to redirect the end-user
-back to your storefront after completing the payment.
+payment method was given the code "mollie-payment-method". The `redirectUrl` should be your order confirmation page.
+It is the url that is used to redirect the customer back to your storefront after completing the payment.
 
 ```GraphQL
 mutation CreateMolliePaymentIntent {
@@ -61,11 +61,9 @@ mutation CreateMolliePaymentIntent {
 }
 ```
 
-The response will contain
-a redirectUrl, which can be used to redirect your customer to the Mollie
-platform.
+You can use `molliePaymentIntent.url` to redirect the customer to the Mollie platform.
 
-'molliePaymentMethodCode' is an optional parameter that can be passed to skip Mollie's hosted payment method selection screen
+The `molliePaymentMethodCode` is an optional parameter that can be passed to preselect a payment method, and skip Mollie's payment method selection screen
 You can get available Mollie payment methods with the following query:
 
 ```GraphQL
@@ -92,9 +90,32 @@ You can get available Mollie payment methods with the following query:
 ```
 
 After completing payment on the Mollie platform,
-the user is redirected to the redirect url that was provided in the `createMolliePaymentIntent` mutation, e.g. `https://storefront/order/CH234X5`
+the user is redirected by Mollie to the provided redirect url (confirmation page).
+E.g. `https://storefront/order/`. The redirect url here was `https://storefront/order`, the order code `CH234X5` is appended automatically by the plugin.
 
-## Pay later methods
+#### Force payment status update
+
+Mollie does not give any guarantees on webhook delivery time, and in some rare cases,
+the Mollie webhook is delayed and the order status is not updated in Vendure.
+
+You can use the `syncMolliePaymentStatus` mutation to force update the order status based on the Mollie payment status.
+This mutation will find any settled or authorized Mollie payments for the given order and update the order status in Vendure accordingly.
+
+```GraphQL
+mutation SyncMolliePaymentStatus {
+  syncMolliePaymentStatus(orderCode: "CH234X5") {
+    id
+    state
+  }
+}
+```
+
+You should wait for an incoming webhook first, because due to technical limitations on the Mollie API, the `syncMolliePaymentStatus`
+mutation will iterate through the last 500 Mollie payments to find the payments for the given order.
+Hence, it is not very performant, and should only be used as a fallback when a webhook
+was not received for ~10 seconds.
+
+### Pay later methods
 
 Mollie supports pay-later methods like 'Klarna Pay Later'. Pay-later methods are captured immediately after payment.
 
@@ -102,17 +123,16 @@ If your order fulfillment time is longer than 24 hours You should pass `immediat
 This will transition your order to 'PaymentAuthorized' after the Mollie hosted checkout.
 You need to manually capture the payment after the order is fulfilled, by settling existing payments, either via the admin UI or in custom code.
 
-Make sure to capture a payment within 28 days, after that the payment will be automaticallreleased.
+Make sure to capture a payment within 28 days, after that the payment will be automatically released.
 See the [Mollie documentation](https://docs.mollie.com/docs/place-a-hold-for-a-payment#authorization-expiration-window)
 for more information.
 
-## ArrangingAdditionalPayment state
+### ArrangingAdditionalPayment state
 
-In some rare cases, a customer can add items to the active order, while a Mollie checkout is still open,
-for example by opening your storefront in another browser tab.
-This could result in an order being in `ArrangingAdditionalPayment` status after the customer finished payment.
-You should check if there is still an active order with status `ArrangingAdditionalPayment` on your order confirmation page,
-and if so, allow your customer to pay for the additional items by creating another Mollie payment.
+In some cases, a customer can add items to the active order, while a Mollie checkout is still open, or an administrator can modify an order.
+Both of these actions will result in an order being in `ArrangingAdditionalPayment` status.
+To finalize an order in `ArrangingAdditionalPayment` status, you can use call the `createMolliePaymentIntent` mutation again with an additional `orderId` as input.
+The `orderId` argument is needed, because an order in `ArrangingAdditionalPayment` status is not an active order anymore.
 
 ```ts title="Signature"
 class MolliePlugin {
@@ -149,6 +169,7 @@ interface MolliePluginOptions {
         order: Order | null,
     ) => AdditionalEnabledPaymentMethodsParams | Promise<AdditionalEnabledPaymentMethodsParams>;
     immediateCapture?: boolean;
+    disableWebhookProcessing?: boolean;
 }
 ```
 
@@ -204,6 +225,12 @@ Immediate capture mode for pay-later methods like Klarna.
 Setting this option will make the plugin ignore the `immediateCapture` option in the `createMolliePaymentIntent` mutation.
 
 The default is true, unless set otherwise as input in the `createMolliePaymentIntent` mutation.
+### disableWebhookProcessing
+
+<MemberInfo kind="property" type={`boolean`}  since="3.6.0"  />
+
+Disable the processing of incoming Mollie webhooks.
+Handle with care! This will keep orders in 'AddingItems' state if you don't manually process the Mollie payments via the `syncMolliePaymentStatus` mutation.
 
 
 </div>
