--- a/docs/docs/reference/graphql-api/admin/enums.mdx
+++ b/docs/docs/reference/graphql-api/admin/enums.mdx
@@ -981,6 +981,14 @@ enum Permission {
   UpdateAdministrator
   """Grants permission to delete Administrator"""
   DeleteAdministrator
+  """Grants permission to create ApiKey"""
+  CreateApiKey
+  """Grants permission to read ApiKey"""
+  ReadApiKey
+  """Grants permission to update ApiKey"""
+  UpdateApiKey
+  """Grants permission to delete ApiKey"""
+  DeleteApiKey
   """Grants permission to create Asset"""
   CreateAsset
   """Grants permission to read Asset"""
