--- a/docs/docs/reference/typescript-api/auth/password-hashing-strategy.mdx
+++ b/docs/docs/reference/typescript-api/auth/password-hashing-strategy.mdx
@@ -2,14 +2,19 @@
 title: "PasswordHashingStrategy"
 generated: true
 ---
-<GenerationInfo sourceFile="packages/core/src/config/auth/password-hashing-strategy.ts" sourceLine="17" packageName="@vendure/core" since="1.3.0" />
+<GenerationInfo sourceFile="packages/core/src/config/auth/password-hashing-strategy.ts" sourceLine="22" packageName="@vendure/core" since="1.3.0" />
 
-Defines how user passwords get hashed when using the [NativeAuthenticationStrategy](/reference/typescript-api/auth/native-authentication-strategy#nativeauthenticationstrategy).
+Defines how sensitive user credentials like passwords and API-Keys get hashed.
 
-:::info
+:::info[Config]
 
-This is configured via the `authOptions.passwordHashingStrategy` property of
+Hashing for passwords when using the [NativeAuthenticationStrategy](/reference/typescript-api/auth/native-authentication-strategy#nativeauthenticationstrategy) can be
+configured via the `authOptions.passwordHashingStrategy` property of
 your VendureConfig.
+
+Hashing for API-Keys can be configured via the [ApiKeyStrategy](/reference/typescript-api/auth/api-key-strategy#apikeystrategy),
+more specifically `authOptions.adminApiKeyStrategy.hashingStrategy` and
+`authOptions.shopApiKeyStrategy.hashingStrategy`.
 
 :::
 
