--- a/docs/docs/reference/typescript-api/entities/authentication-method.mdx
+++ b/docs/docs/reference/typescript-api/entities/authentication-method.mdx
@@ -4,8 +4,8 @@ generated: true
 ---
 <GenerationInfo sourceFile="packages/core/src/entity/authentication-method/authentication-method.entity.ts" sourceLine="14" packageName="@vendure/core" />
 
-An AuthenticationMethod represents the means by which a [User](/reference/typescript-api/entities/user#user) is authenticated. There are two kinds:
-[NativeAuthenticationMethod](/reference/typescript-api/entities/authentication-method#nativeauthenticationmethod) and [ExternalAuthenticationMethod](/reference/typescript-api/entities/authentication-method#externalauthenticationmethod).
+An AuthenticationMethod represents the means by which a [User](/reference/typescript-api/entities/user#user) is authenticated. There are three kinds:
+[NativeAuthenticationMethod](/reference/typescript-api/entities/authentication-method#nativeauthenticationmethod), [ExternalAuthenticationMethod](/reference/typescript-api/entities/authentication-method#externalauthenticationmethod) and $`ApiKeyAuthenticationMethod`.
 
 ```ts title="Signature"
 class AuthenticationMethod extends VendureEntity {
