--- a/docs/docs/reference/typescript-api/job-queue/default-job-queue-plugin.mdx
+++ b/docs/docs/reference/typescript-api/job-queue/default-job-queue-plugin.mdx
@@ -144,7 +144,7 @@ Configuration options for the DefaultJobQueuePlugin. These values get passed int
 ```ts title="Signature"
 interface DefaultJobQueueOptions {
     pollInterval?: number | ((queueName: string) => number);
-    concurrency?: number;
+    concurrency?: number | ((queueName: string) => number);
     backoffStrategy?: BackoffStrategy;
     setRetries?: (queueName: string, job: Job) => number;
     useDatabaseForBuffer?: boolean;
@@ -165,9 +165,26 @@ are active, the polling may cause undue load on the database, in which case this
 should be increased to e.g. 1000.
 ### concurrency
 
-<MemberInfo kind="property" type={`number`} default={`1`}   />
+<MemberInfo kind="property" type={`number | ((queueName: string) => number)`} default={`1`}   />
 
 How many jobs from a given queue to process concurrently.
+
+Can be set to a function which receives the queue name and returns
+the concurrency limit. This is useful for limiting concurrency on
+queues which have resource-intensive jobs.
+
+*Example*
+
+```ts
+DefaultJobQueuePlugin.init({
+  concurrency: (queueName) => {
+    if (queueName === 'apply-collection-filters') {
+      return 1;
+    }
+    return 3;
+  }
+})
+```
 ### backoffStrategy
 
 <MemberInfo kind="property" type={`<a href='/reference/typescript-api/job-queue/types#backoffstrategy'>BackoffStrategy</a>`} default={`() => 1000`}   />
