--- a/docs/docs/reference/typescript-api/services/session-service.mdx
+++ b/docs/docs/reference/typescript-api/services/session-service.mdx
@@ -2,7 +2,7 @@
 title: "SessionService"
 generated: true
 ---
-<GenerationInfo sourceFile="packages/core/src/service/services/session.service.ts" sourceLine="33" packageName="@vendure/core" />
+<GenerationInfo sourceFile="packages/core/src/service/services/session.service.ts" sourceLine="34" packageName="@vendure/core" />
 
 Contains methods relating to [Session](/reference/typescript-api/entities/session#session) entities.
 
@@ -10,7 +10,7 @@ Contains methods relating to [Session](/reference/typescript-api/entities/sessio
 class SessionService implements EntitySubscriberInterface, OnApplicationBootstrap {
     constructor(connection: TransactionalConnection, configService: ConfigService, orderService: OrderService, jobQueueService: JobQueueService, requestContextService: RequestContextService)
     onApplicationBootstrap() => ;
-    createNewAuthenticatedSession(ctx: RequestContext, user: User, authenticationStrategyName: string) => Promise<AuthenticatedSession>;
+    createNewAuthenticatedSession(ctx: RequestContext, user: User, authenticationStrategyName: string, sessionToken?: string) => Promise<AuthenticatedSession>;
     createAnonymousSession() => Promise<CachedSession>;
     getSessionFromToken(sessionToken: string) => Promise<CachedSession | undefined>;
     serializeSession(session: AuthenticatedSession | AnonymousSession) => CachedSession;
@@ -18,6 +18,7 @@ class SessionService implements EntitySubscriberInterface, OnApplicationBootstra
     unsetActiveOrder(ctx: RequestContext, serializedSession: CachedSession) => Promise<CachedSession>;
     setActiveChannel(serializedSession: CachedSession, channel: Channel) => Promise<CachedSession>;
     deleteSessionsByUser(ctx: RequestContext, user: User) => Promise<void>;
+    deleteApiKeySession(ctx: RequestContext, apiKey: ApiKey) => Promise<void>;
     deleteSessionsByActiveOrderId(ctx: RequestContext, activeOrderId: ID) => Promise<void>;
     triggerCleanSessionsJob(batchSize: number) => ;
     cleanExpiredSessions(ctx: RequestContext, batchSize: number) => ;
@@ -41,7 +42,7 @@ class SessionService implements EntitySubscriberInterface, OnApplicationBootstra
 
 ### createNewAuthenticatedSession
 
-<MemberInfo kind="method" type={`(ctx: <a href='/reference/typescript-api/request/request-context#requestcontext'>RequestContext</a>, user: <a href='/reference/typescript-api/entities/user#user'>User</a>, authenticationStrategyName: string) => Promise<<a href='/reference/typescript-api/entities/authenticated-session#authenticatedsession'>AuthenticatedSession</a>>`}   />
+<MemberInfo kind="method" type={`(ctx: <a href='/reference/typescript-api/request/request-context#requestcontext'>RequestContext</a>, user: <a href='/reference/typescript-api/entities/user#user'>User</a>, authenticationStrategyName: string, sessionToken?: string) => Promise<<a href='/reference/typescript-api/entities/authenticated-session#authenticatedsession'>AuthenticatedSession</a>>`}   />
 
 Creates a new [AuthenticatedSession](/reference/typescript-api/entities/authenticated-session#authenticatedsession). To be used after successful authentication.
 ### createAnonymousSession
@@ -80,6 +81,11 @@ Sets the `activeChannel` on the given cached session object and updates the cach
 <MemberInfo kind="method" type={`(ctx: <a href='/reference/typescript-api/request/request-context#requestcontext'>RequestContext</a>, user: <a href='/reference/typescript-api/entities/user#user'>User</a>) => Promise<void>`}   />
 
 Deletes all existing sessions for the given user.
+### deleteApiKeySession
+
+<MemberInfo kind="method" type={`(ctx: <a href='/reference/typescript-api/request/request-context#requestcontext'>RequestContext</a>, apiKey: <a href='/reference/typescript-api/entities/api-key#apikey'>ApiKey</a>) => Promise<void>`}   />
+
+Deletes session related to API-Key
 ### deleteSessionsByActiveOrderId
 
 <MemberInfo kind="method" type={`(ctx: <a href='/reference/typescript-api/request/request-context#requestcontext'>RequestContext</a>, activeOrderId: <a href='/reference/typescript-api/common/id#id'>ID</a>) => Promise<void>`}   />
